Fix the strange gap at the bottom

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 
 div.container {
     background: #ffffffee;
-    height: 100%;
+    min-height: 100vh;
+    margin-bottom: -2rem;
 }
 
 #prebuilt-links {
